# practicas_pre_profesionales

./: .gitignore  Cargo.toml  guite-nginx-config.md  nginx-config  package-lock.json  package.json  read.me
assets/json/: carreras.json  departamentos.json  formacion_academica.json
public/css/: css.prod.css  input.css
public/js/: common.js
src/: config.rs  general_types.rs  main.rs  t_logs.rs
src/helpers/: mod.rs  t_json.rs
src/maud/: mod.rs
src/maud/components/: convocatoria_item.rs  convocatoria_section.rs  filters.rs  footer.rs  head.rs  left_home.rs  menu_home.rs  mod.rs  right_home.rs
src/maud/layouts/: home_layout.rs
src/maud/pages/: home.rs
src/middleware/: api_auth_middleware.rs  mod.rs
src/modules/: mod.rs
src/modules/organizaciones/application/: create.rs  find_by_search.rs  mod.rs
src/modules/organizaciones/application/ports/: local_storage.rs
src/modules/organizaciones/domain/: dto.rs  mod.rs  organizacion.rs  repository.rs
src/modules/organizaciones/infrastructure/: mariadb_repository.rs  mod.rs
src/modules/organizaciones/presentation/router/: mod.rs  (+2 more)
src/modules/pre_ofertas/application/: create.rs  create_many.rs  find_all.rs  find_by_id.rs  mod.rs  update.rs
src/modules/pre_ofertas/domain/: mod.rs  pre_ofertas.rs  repository.rs
src/modules/pre_ofertas/infrastructure/: mariadb_repository.rs  mod.rs
src/modules/tokens/application/: get_by_token.rs  mod.rs
src/modules/tokens/domain/: mod.rs  repository.rs  token.rs
src/modules/tokens/infrastructure/: mariadb_repository.rs
src/modules/tokens/presentation/: auth_token.rs
(+3 files in other folders)
