[package]
name = "rs-backend"
version = "0.1.0"
edition = "2024"

[dependencies]
actix-files = "0.6.10"
actix-web = "4.13.0"
dotenvy = "0.15.7"
maud = { version = "0.27.0", features = ["actix-web"] }
serde = "1.0.228"
serde_json = "1.0.149"
sqlx = { version = "0.8.6", features = [
    "runtime-tokio-native-tls",
    "mysql",
    "macros",
    "time",
] }
time = { version = "0.3.47", features = [
    "formatting",
    "local-offset",
    "macros",
    "serde-human-readable",
] }
tracing = "0.1.44"
tracing-actix-web = "0.7.21"
tracing-log = "0.2.0"
tracing-subscriber = { version = "0.3.23", features = [
    "env-filter",
    "tracing-log",
    "time",
    "local-time",
] }
